--- a/Views/Home/Loguin.cshtml
+++ b/Views/Home/Loguin.cshtml
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 <body>
     <div class="row mt-5">
