--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                          <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Inmueble" asp-action="Index">Inmuebles</a>
                         </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="TipoInmueble" asp-action="Index">Tipos de Inmuebles</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Contrato" asp-action="Index">Contratos</a>
                         </li>
@@ -43,6 +46,10 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Usuario" asp-action="Index">Usuarios</a>
+                        </li>
+                        <li>
+                           <button class="bt btn-warning"><a class="dropdown-item text-light" asp-controller="Usuario" asp-action="Perfil"><i class="lnr lnr-user"></i> Perfil</a></button> 
+							<button class="btn-warning"><a class="dropdown-item text-light" asp-controller="Usuario" asp-action="Logout"><i class="lnr lnr-exit"></i> Salir</a></button>
                         </li>
                     </ul>
                 </div>
