--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -56,9 +56,9 @@
                 
                
                 <td>
-                    <a asp-action="Detalles" asp-route-id=@item.Id><i class="fa fa-eye " style="font-size:25px;" id="detalles"></i></a>
-                    <a asp-action="Editar" asp-route-id=@item.Id><i class="fa fa-pencil " style="font-size:25px;" id="edi"></i></a>
-                    <a href="#"onclick="eliminar('@item.Id', '@item.Nombre')" ><i class="fa fa-trash " style="font-size:25px;"id="eli"></i></a>
+                    <a asp-action="Detalles" asp-route-id=@item.Id><i class="fa fa-eye " title = "Ver detalles" style="font-size:25px;" id="detalles"></i></a>
+                    <a asp-action="Editar" asp-route-id=@item.Id><i class="fa fa-pencil "  title="Editar"style="font-size:25px;" id="edi"></i></a>
+                    <a href="#"onclick="eliminar('@item.Id', '@item.Nombre')" ><i class="fa fa-trash " title="eliminar" style="font-size:25px;"id="eli"></i></a>
                 </td>
             </tr>
         }
