--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -19,6 +19,9 @@ html {
 
 body {
   margin-bottom: 60px;
+  background-image: url('../ImgSubidas/ciudad.png');
+    background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
+    background-position: center; /* Centra la imagen */
 }
 #body{
   background-color: rgb(240, 176, 97);
