--- a/Views/Usuario/Editar.cshtml
+++ b/Views/Usuario/Editar.cshtml
@@ -6,7 +6,7 @@
 <h4>Editar Usuario</h4>
 <hr />
 <div class="row">
-    <div class="col-6 " id ="table">
+    <div class="col-6 " id ="table">    
          <div class="col ">
         <form asp-action="EliminarAvatar" method="post">
             <input type="hidden" name="id" value="@Model.Id" />
@@ -34,17 +34,17 @@
             </div>
             <div class="form-group col-6">
                 <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
+                <input asp-for="Nombre" class="form-control" required />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="form-group col-6">
                 <label asp-for="Apellido" class="control-label"></label>
-                <input asp-for="Apellido" class="form-control" />
+                <input asp-for="Apellido" class="form-control" required />
                 <span asp-validation-for="Apellido" class="text-danger"></span>
             </div>
             <div class="form-group col-6">
                 <label asp-for="Correo" class="control-label"></label>
-                <input asp-for="Correo" class="form-control" />
+                <input asp-for="Correo" class="form-control" required/>
                 <span asp-validation-for="Correo" class="text-danger"></span>
             </div>
             <div class="form-group p-3" >
@@ -59,7 +59,7 @@
              <input type="hidden" name="id" value="@Model.Id" />
             <div class="form-group col-6" >
                 <label asp-for="Clave" class="control-label"></label>
-                <input asp-for="Clave" class="form-control" required />
+                <input asp-for="Clave" class="form-control" />
                 @if (Model.Id == 0) // Si el ID es 0, es una creación, no una edición
                     {
                     <span class="text-danger">* Este campo es obligatorio para nuevos usuarios</span>
