--- a/Views/Contrato/Index.cshtml
+++ b/Views/Contrato/Index.cshtml
@@ -67,6 +67,7 @@
                 <a asp-controller="Pago" asp-action="agregarpago" asp-route-id="@item.Id" title="Agregar pago"><i class="fa fa-plus" style="font-size:25px;" id="agregar"></i></a>
                 <a asp-controller="Pago" asp-action="PagosContrato" asp-route-id="@item.Id" title="Listar Pagos"><i class="fa fa-bars" style="font-size:25px;" id="pagosC"></i></a>
                 <a asp-action="Renovar" asp-route-id=@item.Id title="Renovar contrato"><i class="fa fa-rotate-right" style="font-size:25px;" id="ren"></i></a>
+                <a asp-action="FinalizarContrato" asp-route-id="@item.Id" title="Finalizar contrato"><img src="../ImgSubidas/finally.png" height="25px" width="25px" alt="Finalizar contrato"></a>
             </td>
             </tr>
         }
