--- a/Views/Pago/editar.cshtml
+++ b/Views/Pago/editar.cshtml
@@ -36,10 +36,14 @@
                 }
                 <span asp-validation-for="Fecha" class="text-danger"></span>
             </div>
-            <div class="form-group col-4">
+          <div class="form-group col-3">
                 <label asp-for="Referencia" class="control-label"></label>
-                <input asp-for="Referencia" class="form-control" />
-                <span asp-validation-for="Referencia" class="text-danger"></span>
+                <select class="form-control" name="Referencia" id= "">
+                    @foreach (var item in (List<string>)ViewBag.Referencia)
+                    {
+                        @:<option @(item== Model?.Referencia ? "selected" : "") value="@item"> @item</option>
+                    }
+                </select>
             </div>
             <div class="form-group col-4">
                 <label asp-for="Importe" class="control-label"></label>
